@@ -1,6 +1,6 @@
 .\" Manpage for valentina.
 .\" Contact dismine@gmail.com to correct errors.
-.TH valentina 1 "10 December, 2017" "valentina man page"
+.TH valentina 1 "13 July, 2018" "valentina man page"
 .SH NAME
 Valentina \- Pattern making program.
 .SH SYNOPSIS
@@ -201,7 +201,9 @@ The path to output destination folder. By default the directory at which the app
 .BR "*" " Descending area = 2."
 .RE
 .IP "-t, --test"
-Run the program in a test mode. The program in this mode loads a single pattern file and silently quit without showing the main window. The key have priority before key \*(lqbasename\*(rq.
+.RB "Run the program in a test mode. The program in this mode loads a single pattern file and silently quit without showing the main window. The key have priority before key \*(lqbasename\*(rq."
+.IP "--pedantic"
+.RB "Make all parsing warnings into errors. Have effect only in console mode. Use to force Valentina to immediately terminate if a pattern contains a parsing warning."
 .IP "--no-scaling"
 .RB "Disable high dpi scaling. Call this option if has problem with scaling (by default scaling enabled). Alternatively you can use the QT_AUTO_SCREEN_SCALE_FACTOR=0 environment variable."
 .IP "--csvWithHeader"
