@@ -50,6 +50,7 @@
 - [#819] Use OpenGL as render for view.
 - [#826] New Feature. Add and remove items to groups from the context menu.
 - Mouse double click zoom fit best current pattern piece.
+- [#862] Force Valentina to immediately terminate if a pattern contains a parsing warning.
 
 # Version 0.5.1 (unreleased)
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
